<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme" >
    
    <!-- Radio Buttons Fragment for rating a venue -->
	<!-- Author: Ian Lamon -->
    
    
    <!-- Radio Buttons to rate/score a venue. Values 0-5 -->
    <RadioGroup
        android:id="@+id/radioGroupScore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioScore0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:contentDescription="@string/zero"
            android:text="@string/zero" />

        <RadioButton
            android:id="@+id/radioScore1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/one"
            android:text="@string/one" />

        <RadioButton
            android:id="@+id/radioScore2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/two"
            android:text="@string/two" />

        <RadioButton
            android:id="@+id/radioScore3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/three"
            android:text="@string/three" />

        <RadioButton
            android:id="@+id/radioScore4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/four"
            android:text="@string/four" />

        <RadioButton
            android:id="@+id/radioScore5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/five"
            android:text="@string/five" />
    </RadioGroup>
    
    <!-- Line separator after radion buttons before next item to be rated -->
    <TextView
        android:id="@+id/tvLine1"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#2980b9" />

</LinearLayout>
