<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Spacing" >

    <!-- Activity to add a new venue to the database -->
    <!-- Author: Ian Lamon -->


    <!-- Add Venue Name -->

    <LinearLayout
        style="@style/paddingTopBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvVenueName"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/venueName"
            android:text="@string/venueName" />

        <EditText
            android:id="@+id/etVenueName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/venueName"
            android:ems="10"
            android:inputType="textCapWords" />
    </LinearLayout>

    <!-- Add Venue Type -->

    <LinearLayout
        style="@style/paddingTopBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvVenueType"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/venueType"
            android:text="@string/venueType" />

        <Spinner
            android:id="@+id/spinnerSetVenueType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/venueType"
            android:ems="10"
            android:prompt="@string/venuePrompt"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Add Venue Street Name -->

    <LinearLayout
        style="@style/paddingTopBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvStreetName"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/streetName"
            android:text="@string/streetName" />

        <EditText
            android:id="@+id/etStreetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/streetName"
            android:ems="10"
            android:inputType="textCapWords" />
    </LinearLayout>

    <!-- Pick Venue Location from Spinner -->

    <LinearLayout
        style="@style/paddingTopBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:contentDescription="@string/postalCode"
            android:text="@string/postalCode" />

        <Spinner
            android:id="@+id/spinnerSetLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/postalCode"
            android:ems="10"
            android:prompt="@string/postalCodePrompt"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Submit Button -->

    <Button
        android:id="@+id/bSubmit2"
        style="@style/buttonStyle"
        android:contentDescription="@string/submit"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="addNewVenue" />

    <!-- Logo at bottom of activity -->

    <ImageView
        android:id="@+id/ivLogo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/logoDescription"
        android:padding="20dp"
        android:src="@drawable/leglessindublinbluelogo" />

</LinearLayout>