<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp" >

    <!-- Fragment for Search Results. Contains Venue Name, their rating -->
    <!-- and button to go to rate this venue activity -->
    <!-- Author: Ian Lamon -->

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
    <!-- Text view to display Venue name -->
    <TextView
        android:id="@+id/resultName"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="55"
        android:contentDescription="@string/venueName"
        android:text="@string/placeHolder"
        android:textSize="20sp" />

    <!-- Rating Bar to display venue rating out of 5 stars -->
    <RatingBar
        android:id="@+id/venueRatingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/resultsText"
        android:isIndicator="true"
        android:layout_gravity="center"
        android:numStars="5"
        android:rating="2.5"
        android:stepSize="0.5" />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
    <!-- Text view to display Venue name -->
    <TextView
        android:id="@+id/resultStreetName"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/streetName"
        android:text="@string/placeHolder"
        android:textSize="14sp" />
    
    <TextView
        android:id="@+id/resultNumRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:contentDescription="@string/venueName"
        android:text="@string/placeHolder"
        android:textSize="14sp" />
	</LinearLayout>

</LinearLayout>