<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Spacing"
    tools:context=".AddNewVenue" >

    <!-- Rating activity to score a venue on specified criteria -->
    <!-- Author: Ian Lamon -->


    <!-- Rating subject 1: Entrance -->
    <!-- Section consists of text (name of crieria being rated) -->
    <!-- followed by rate_fragment to display buttons 0-5 for rating score -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvEntrance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/entrance"
            android:text="@string/entrance" />
    </LinearLayout>

    <fragment
        android:id="@+id/entranceRating"
        android:name="R.layout.rate_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:contentDescription="@string/entrance"
        tools:layout="@layout/rate_fragment" />

    <!-- Rating subject 2: Doors -->
    <!-- Section consists of text (name of crieria being rated) -->
    <!-- followed by rate_fragment to display buttons 0-5 for rating score -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvDoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:contentDescription="@string/doors"
            android:text="@string/doors" />
    </LinearLayout>

    <fragment
        android:id="@+id/doorsRating"
        android:name="R.layout.rate_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:contentDescription="@string/doors"
        tools:layout="@layout/rate_fragment" />

    <!-- Rating subject 3: Flooring -->
    <!-- Section consists of text (name of crieria being rated) -->
    <!-- followed by rate_fragment to display buttons 0-5 for rating score -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvFlooring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:contentDescription="@string/flooring"
            android:text="@string/flooring" />
    </LinearLayout>

    <fragment
        android:id="@+id/flooringRating"
        android:name="R.layout.rate_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:contentDescription="@string/flooring"
        tools:layout="@layout/rate_fragment" />

    <!-- Rating subject 4: Steps -->
    <!-- Section consists of text (name of crieria being rated) -->
    <!-- followed by rate_fragment to display buttons 0-5 for rating score -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:contentDescription="@string/steps"
            android:text="@string/steps" />
    </LinearLayout>

    <fragment
        android:id="@+id/stepsRating"
        android:name="R.layout.rate_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:contentDescription="@string/steps"
        tools:layout="@layout/rate_fragment" />

    <!-- Rating subject 5: Lifts -->
    <!-- Section consists of text (name of crieria being rated) -->
    <!-- followed by rate_fragment to display buttons 0-5 for rating score -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:contentDescription="@string/lifts"
            android:text="@string/lifts" />
    </LinearLayout>

    <fragment
        android:id="@+id/liftsRating"
        android:name="R.layout.rate_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:contentDescription="@string/lifts"
        tools:layout="@layout/rate_fragment" />

    <!-- Rating subject 6: Bathrooms -->
    <!-- Section consists of text (name of crieria being rated) -->
    <!-- followed by rate_fragment to display buttons 0-5 for rating score -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvBathrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:contentDescription="@string/bathrooms"
            android:text="@string/bathrooms" />
    </LinearLayout>

    <fragment
        android:id="@+id/bathroomsRating"
        android:name="R.layout.rate_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:contentDescription="@string/bathrooms"
        tools:layout="@layout/rate_fragment" />

    <!-- Rating subject 7: Internal Layout -->
    <!-- Section consists of text (name of crieria being rated) -->
    <!-- followed by rate_fragment to display buttons 0-5 for rating score -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:contentDescription="@string/layout"
            android:text="@string/layout" />
    </LinearLayout>

    <fragment
        android:id="@+id/layoutRating"
        android:name="R.layout.rate_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:contentDescription="@string/layout"
        tools:layout="@layout/rate_fragment" />

    <!-- Rating subject 8: Staff -->
    <!-- Section consists of text (name of crieria being rated) -->
    <!-- followed by rate_fragment to display buttons 0-5 for rating score -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvStaff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:contentDescription="@string/staff"
            android:text="@string/staff" />
    </LinearLayout>

    <fragment
        android:id="@+id/staffRating"
        android:name="R.layout.rate_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:contentDescription="@string/staff"
        tools:layout="@layout/rate_fragment" />

    <!-- Rating subject 9: Parking -->
    <!-- Section consists of text (name of crieria being rated) -->
    <!-- followed by rate_fragment to display buttons 0-5 for rating score -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvParking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:contentDescription="@string/parking"
            android:text="@string/parking" />
    </LinearLayout>

    <fragment
        android:id="@+id/parkingRating"
        android:name="R.layout.rate_fragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:contentDescription="@string/parking"
        tools:layout="@layout/rate_fragment" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/bSubmit2"
        style="@style/buttonStyle"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:contentDescription="@string/submit"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Logo at bottom of screen -->
    <ImageView
        android:id="@+id/ivLogo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/logoDescription"
        android:padding="20dp"
        android:src="@drawable/leglessindublinbluelogo" />

</LinearLayout>